force-app/main/default/objects/Payment_Schedule__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>Frequency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>