force-app/main/default/objects/Payment_Schedule__c/fields/NetSuite_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Sync_Status__c</fullName>
    <label>NetSuite Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sync Failure</fullName>
            </value>
            <value>
                <fullName>Sync Successful</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>