force-app/main/default/objects/Payment_Schedule__c/fields/NS_File_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>NS_File_Error_Message__c</fullName>
    <label>NS_File_Error_Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>