force-app/main/default/objects/Payment_Schedule__c/fields/NS_File_Name__c.field-meta.xml
<CustomField>
    <fullName>NS_File_Name__c</fullName>
    <label>NS File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>