force-app/main/default/objects/Payment_Schedule__c/fields/Number_of_Invoices__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Invoices__c</fullName>
    <label>Number of Invoices</label>
    <length>3</length>
    <type>Text</type>
</CustomField>