force-app/main/default/objects/Payment_Schedule__c/fields/Override_Amount__c.field-meta.xml
<CustomField>
    <fullName>Override_Amount__c</fullName>
    <label>Override Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>