force-app/main/default/objects/Payment_Schedule__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>Payment_Schedule__c</referenceTo>
    <relationshipLabel>Payment Schedule</relationshipLabel>
    <relationshipName>Payment_Schedule</relationshipName>
    <type>Lookup</type>
</CustomField>