force-app/main/default/objects/Payment_Schedule__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <label>Payment</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>