force-app/main/default/objects/Payment_Schedule__c/fields/Payment_Index__c.field-meta.xml
<CustomField>
    <fullName>Payment_Index__c</fullName>
    <label>Payment Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>