force-app/main/default/objects/Payment_Schedule__c/fields/PerMthperQty__c.field-meta.xml
<CustomField>
    <fullName>PerMthperQty__c</fullName>
    <label>PerMthperQty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>