force-app/main/default/objects/Payment_Schedule__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Payment Schedule</relationshipLabel>
    <relationshipName>Payment_Schedule</relationshipName>
    <type>Lookup</type>
</CustomField>