force-app/main/default/objects/Payment_Schedule__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <label>Term</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>