force-app/main/default/objects/Payment_Schedule__c/fields/Unit_List__c.field-meta.xml
<CustomField>
    <fullName>Unit_List__c</fullName>
    <label>Unit List</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>