force-app/main/default/objects/Payment_Schedule__c/validationRules/Payment_Schedule_Access_Restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Schedule_Access_Restriction</fullName>
    <active>true</active>
    <description>Order Fulfilment related records are not to edit</description>
    <errorConditionFormula>AND(
NOT(ISNEW()),
$User.Alias &lt;&gt; &apos;autoproc&apos;,
NOT(INCLUDES($User.RBAC_Group__c, &apos;API&apos;)),
NOT(INCLUDES($User.RBAC_Group__c, &apos;IT System Admin&apos;)),
NOT(INCLUDES($User.RBAC_Group__c, &apos;IT Prod Ops Support&apos;)),
NOT(INCLUDES($User.RBAC_Group__c, &apos;System - IT&apos;)),
Quote_Number__r.Opportunity_Stage__c == &apos;7 Closed Won&apos; 
)</errorConditionFormula>
    <errorMessage>You aren’t authorized to Payment Schedule, hence please create a support ticket with ProdOps Support or email ProdOpsapps@rubrik.com” with details</errorMessage>
</ValidationRule>